added scss list and loop

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <input type="button" class="button" value="Check Weather" onclick="getWeather();"><br>
 
   <div id="weather-data"></div><br>
-  <div id="weather-reaction"></div>
+  <div id="weather-results"></div>
+  <img id="image-coat" alt="cat wearing coat">
+  <img id="image-sweater" alt="cat wearing sweater">
   <script type="text/javascript" src="weather.js"></script>
 </div>
 </body>
